# erlangen

./: CMakeLists.txt  README.md  draw.py  erlangen.py  main.py  mobius.py  parabola_ex.py  pyproject.toml  shapes.py
erlangen/: affine_transform.py  animate.py  conics.py  draw.py  erlangen.py  euclidean_transform.py  ex.py  general_linear_group.py  mobius.py  projective_transform.py  shapes.py  start.py  transform.py  util.py
tests/: test_affine_transform.py  test_conics.py  test_mobius_transform.py
